[gd_scene load_steps=8 format=3 uid="uid://dh7es4t78k6o6"]

[ext_resource type="Texture2D" uid="uid://ummy2di0eudu" path="res://assets/thunt_bg.png" id="1_5p8wc"]
[ext_resource type="Script" uid="uid://cs0lvi8dr1a6g" path="res://scenes/settings.gd" id="1_r6d6q"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r6d6q"]
texture = ExtResource("1_5p8wc")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r6d6q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r6d6q"]
bg_color = Color(0.851769, 0.851769, 0.851769, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f4mfi"]
bg_color = Color(0.678944, 0.678944, 0.678943, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6wm04"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r6d6q")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_r6d6q")

[node name="screen_label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.0
offset_top = 80.0
offset_right = 31.0
offset_bottom = 103.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -227.0
offset_top = -84.0
offset_right = 227.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="StartMovesLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 27
text = "Starting moves"
horizontal_alignment = 1

[node name="player_moves" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "15"
max_length = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="SpeedLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 27
text = "Speed"
horizontal_alignment = 1

[node name="speed_options" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 20

[node name="menu_back_button" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_r6d6q")
theme_override_styles/hover = SubResource("StyleBoxFlat_r6d6q")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f4mfi")
theme_override_styles/normal = SubResource("StyleBoxFlat_6wm04")
text = "Back to Menu"

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/player_moves" to="." method="_on_player_moves_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/menu_back_button" to="." method="_on_menu_back_button_pressed"]
